--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <div class="col-lg-6">
                     <h3>Node Express.js</h3>
                     <img class="technologies-img grow" src="images\Node.js_logoicon.png" alt="node-img">
+
                 </div>
 
                 <div class="col-lg-6">
@@ -98,17 +99,17 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <h3>App to make notes created with React </h3>
+                <h3 class="projects-text">App to make notes created with React </h3>
                 <img src="images\projects-notes-once-again.png" class="projects-img" alt="...">
               </div>
 
               <div class="carousel-item">
-                <h3>Blog website created with node, ejs and MongoDB</h3>
+                <h3 class="projects-text">Blog website created with node, ejs and MongoDB</h3>
                 <img src="images\projects-blog.png" class="projects-img" alt="...">
 
               </div>
               <div class="carousel-item">
-                <h3>To-do list app created with node, ejs and MongoDB </h3>
+                <h3 class="projects-text">To-do list app created with node, ejs and MongoDB </h3>
                 <img  src="images\projects-todo-final.png" class="projects-img"  alt="react-img">
               </div>
             </div>
@@ -127,7 +128,7 @@
     <section id="contact-me">
         <div>
             <h1 class="contact-me-heading">Check out more or Contact Me ^-^</h1>
-            <h3>via one of the options below</h3>
+            <h3 class="contact-me-text">via one of the options below</h3>
         </div>
         <!-- <div>
           <a class="btn btn-light btn-lg contact-me-btn"  href="mailto:mweltrowskik@gmail.com">E-mail</a>
