--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="row ">
 
                 <div class="col-lg-6">
-                    <h3>MongoDB</h3>
+                    <h3 class="technolgies-text">MongoDB</h3>
                     <img class="technologies-img grow" src="images\mongodb_thumbnail.webp" alt="MongoDB-img">
                 </div>  
                   
